# system-tray

./: CHANGELOG.md  Cargo.toml  README.md
.github/scripts/: ubuntu_setup.sh
.github/workflows/: build.yml  deploy.yml
examples/: basic.rs
src/: client.rs  data.rs  error.rs  gtk_menu.rs  item.rs  lib.rs  menu.rs
src/dbus/: dbus_menu_proxy.rs  mod.rs  notifier_item_proxy.rs  notifier_watcher_proxy.rs  status_notifier_watcher.rs
