[package]
name = "system-tray"
version = "0.4.0"
edition = "2021"
license = "MIT"
description = "Async `StatusNotifierItem` and `DBusMenu` client for custom tray implementations."
repository = "https://github.com/jakestanger/system-tray"
categories = ["gui"]
keywords = ["statusnotifieritem", "dbusmenu", "tokio", "tray"]

[features]
default = []
dbusmenu-gtk3 = ["dep:gtk", "dep:dbusmenu-gtk3-sys"]

[dependencies]
zbus = { version = "3.15.2", features = ["tokio"] }
tracing = "0.1.41"
serde = { version = "1.0.216", features = ["derive"] }
tokio = { version = "1.42.0", features = ["rt", "sync", "macros", "time"] }
thiserror = "2.0.7"

gtk = {  version = "0.18.1", optional = true }
dbusmenu-gtk3-sys = {  version = "0.1.0", optional = true }

[dev-dependencies]
tokio = { version = "1.41.1", features = ["rt-multi-thread"] }