[package]
name = "system-tray"
version = "0.7.0"
edition = "2021"
license = "MIT"
description = "Async `StatusNotifierItem` and `DBusMenu` client for custom tray implementations."
repository = "https://github.com/jakestanger/system-tray"
categories = ["gui"]
keywords = ["statusnotifieritem", "dbusmenu", "tokio", "tray"]

[features]
default = ["data"]
data = []
dbusmenu-gtk3 = ["dep:gtk", "dep:dbusmenu-gtk3-sys"]

[dependencies]
zbus = { version = "5.3", default-features = false, features = ["tokio"] }
tracing = "0.1.41"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["rt", "sync", "macros", "time"] }
thiserror = "2.0"
futures-lite = "2.6"
cfg-if = "1.0.0"

gtk = { version = "0.18.1", optional = true }
dbusmenu-gtk3-sys = { version = "0.1.0", optional = true }

[dev-dependencies]
tokio = { version = "1.41.1", features = ["rt-multi-thread"] }
